Revision history for Test-Deep

0.117     2015-06-21
        - do not lose argument(s) to import
          (fixes https://github.com/rjbs/Test-Deep/issues/29 )

0.116     2015-06-20
        - on its own, :preload options uses default group of exports

0.115     2015-01-09
        - worked around a bug in chained goto on 5.8.5

0.114     2014-12-11
        - improve prereqs metadata (thanks, Karen Etheridge)
        - add a noneof() set test (thanks, Peter Haworth)
        - regexponly hasn't worked... ever. now it does
        - passing :preload to import loads all plugins up front
        - a few more tests have been documented
        - the many exports of Test::Deep are now documented!

0.113     2014-08-22
        - fix a compile error (!!) in RegexpOnly
        - fix some documentation typos (thanks, ZOFFIX)
        - add license to META file

0.112     2013-11-30
        - rebuild MANIFEST, adding two forgotten files

0.111     2013-11-30

        - When printing diagnostics, differentiate the type of a blessed object
          from the name of the class itself (RT#78288, caused by changes to how
          blessed objects are treated in 0.109) (thanks, Karen Etheridge)

        - Typo fixes (thanks, David Steinbrunner)

        - Fixes to clarity and accuracy of documentation (thanks, Michael Hamlin)

        - Add metadata links to repo and issue tracker

        - Added obj_isa for testing ->isa without falling back to ref($x)

        - Added the *experimental* ":v1" export group to skip importing
          Isa, isa, and blessed

0.110     2012-06-16

          Allow methods() and listmethods() to work again on class methods
          (RT#77804) (thanks, Ricardo Signes!)

0.109     2012-02-16

          UNIVERSAL::isa and UNIVERAL::can are no longer called as functions:
          this was deprecated in UNIVERSAL 1.03. (RT#74760, Karen Etheridge)

          the code that builds the exporter configuration is cleaned up; more